work on style section

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,41 @@
-h1 {
-    color: blue;
+* {
+    padding: 0%;
+    margin: 0%;
+    box-sizing: border-box
+}
+.content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-top: 300px;
+    gap: 10px;
+}
+.start {
+    background: darkcyan;
+    color: white;
+    width: 100px;
+    height: 50px;
+    border: 1px solid darkcyan;
     font-size: 20px;
+    font-family: sans-serif;
+    font-weight: bold;
+}
+.close {
+    background: red;
+    color: white;
+    width: 100px;
+    height: 50px;
+    border: 1px solid red;
+    font-size: 20px;
+    font-family: sans-serif;
+    font-weight: bold;
+}
+.input {
+    width: 100px;
+    height: 50px;
+    font-size: 20px;
+    font-family: sans-serif;
+    font-weight: bold;
+    text-align: center;
 }
