--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,8 @@
   border: 1px solid darkcyan;
   font-size: 20px;
   font-family: sans-serif;
-  font-weight: bold; }
+  font-weight: bold;
+  border-radius: 4px; }
 
 .close {
   background: red;
@@ -29,7 +30,8 @@
   border: 1px solid red;
   font-size: 20px;
   font-family: sans-serif;
-  font-weight: bold; }
+  font-weight: bold;
+  border-radius: 4px; }
 
 .input {
   width: 100px;
@@ -37,4 +39,15 @@
   font-size: 20px;
   font-family: sans-serif;
   font-weight: bold;
-  text-align: center; }
+  text-align: center;
+  border-radius: 4px;
+  border: 1px solid gold; }
+
+.text {
+  width: 100px;
+  height: 50px;
+  font-size: 20px;
+  font-family: sans-serif;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 20px; }
