--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,6 +20,8 @@
     font-size: 20px;
     font-family: sans-serif;
     font-weight: bold;
+    border-radius: 4px;
+
 }
 .close {
     background: red;
@@ -30,6 +32,8 @@
     font-size: 20px;
     font-family: sans-serif;
     font-weight: bold;
+    border-radius: 4px;
+
 }
 .input {
     width: 100px;
@@ -38,4 +42,15 @@
     font-family: sans-serif;
     font-weight: bold;
     text-align: center;
+    border-radius: 4px;
+    border:  1px solid gold;
+}
+.text {
+    width: 100px;
+    height: 50px;  
+    font-size: 20px;
+    font-family: sans-serif;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 20px;
 }
